e45f9fc5b2ceab3a1df6c44d82110fa8a1111fa4 Fix: Vertical alignment in header is now consistent across styles
https://datatables.net/forums/discussion/comment/240171/#Comment_240171

Sync to source repo @e45f9fc5b2ceab3a1df6c44d82110fa8a1111fa4

--- a/css/dataTables.jqueryui.css
+++ b/css/dataTables.jqueryui.css
@@ -6,6 +6,7 @@
   --dt-row-hover: 0, 0, 0;
   --dt-column-ordering: 0, 0, 0;
   --dt-header-align-items: center;
+  --dt-header-vertical-align: middle;
   --dt-html-background: white;
 }
 :root.dark {
@@ -79,6 +80,7 @@ div.dt-scroll-body tfoot tr td div.dt-scroll-sizing {
   --dt-row-hover: 0, 0, 0;
   --dt-column-ordering: 0, 0, 0;
   --dt-header-align-items: center;
+  --dt-header-vertical-align: middle;
   --dt-html-background: white;
 }
 :root.dark {
@@ -402,6 +404,7 @@ table.dataTable thead td,
 table.dataTable tfoot th,
 table.dataTable tfoot td {
   text-align: left;
+  vertical-align: var(--dt-header-vertical-align);
 }
 table.dataTable thead th.dt-head-left,
 table.dataTable thead td.dt-head-left,
